--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -4,14 +4,16 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+@import "compass/css3/text-shadow";
+
 
 $main-color:white;
 $red:#9b2629;
 $blue:#207785;
 
 body {
-  background-color: white;
-  font: 14px helvetica, arial, clean, sans-serif;
+  background-color: $main-color;
+  font: 14px 'helvetica neue', arial, clean, sans-serif;
   //font-family:'georgia';
   text-align: center;
 }
@@ -23,13 +25,16 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   margin-bottom: 1em;
+  font-size:1.2em;
+  color:darken($main-color,15%);
 }
 
 p {
-  margin: 1em 0;
+  margin: 1.3em 0;
 }
 
 a {
+  @include single-text-shadow(white, 1px, 1px, 5px);
   color: $red;
   text-decoration:none;
 }
@@ -56,9 +61,9 @@ hr{
 }
 
 blockquote{
-  color:darken($main-color, 50%);
-  font-weight:100;
-  margin:0px 0px 0px 5px;
+  margin:0px 0px 0px 0px;
+  padding:0px 0px 0px 10px;
+  border-left:3px solid darken($main-color,5%);
 }
 em{
   font-style:italic;
@@ -76,12 +81,17 @@ ul.posts {
 
   ul.posts li {
     line-height: 1.75em;
+    font-size:1em;
+    a{
+      font-weight:800;
+    }
   }
 
   ul.posts span {
     font-size:80%;
     color:darken($main-color,40%);
-    font-family: 'courier', 'monaco';
+    font-weight:200;
+    float:right;
   }
 
 p.posts{
@@ -105,7 +115,7 @@ p.posts{
 .title {
   color: black;
   font-weight: bold;
-  font-size:16px;
+  font-size:1.6em;
   margin-bottom: 1.5em;
   text-align:center;
 }
@@ -113,18 +123,18 @@ p.posts{
   font-size:1.5em;
 }
 .about{
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   color:darken(white,70%);
-  font-weight:100;
+  font-weight:200;
   a{
-    font-weight:400;
+    font-weight:800;
   }
 }
   .site h1{
-    color:#3d3d3d;
   }
   .site ul{
     list-style-position:outside;
+    margin-bottom:1em;
   }
   .site li{
     margin:1px 0px;
@@ -158,7 +168,7 @@ p.posts{
     color: #666;
     margin-top: 2em;
     overflow: hidden;
-    font-weight:100;
+    font-weight:200;
   }
 
     .site .footer .contact {
@@ -195,10 +205,19 @@ p.posts{
 
 }
 #post{
-//  h1,.meta{
-//    text-align:center;
-//    margin:2px 0px;
-//  }
+  h1{
+    color:darken($main-color,70%);
+    margin:0px;
+  }
+  p{
+    font-family:georgia;
+    line-height:1.6em;
+  }
+  p.meta{
+    font-family:'helvetica neue';
+    font-weight:100;
+  }
+
 }
 
   /* standard */
