--- a/css/screen.css
+++ b/css/screen.css
@@ -89,7 +89,7 @@ h1 {
 
 /* line 32, sass/screen.scss */
 p {
-  margin: 1.3em 0;
+  margin: 1.2em 0;
 }
 
 /* line 36, sass/screen.scss */
@@ -117,19 +117,18 @@ strong {
 
 /* line 57, sass/screen.scss */
 hr {
-  color: white;
-  padding: 10px;
-  border: none;
+  border: 1px solid #f2f2f2;
+  width: 30%;
 }
 
-/* line 63, sass/screen.scss */
+/* line 62, sass/screen.scss */
 blockquote {
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 10px;
-  border-left: 3px solid #f2f2f2;
+  border-left: 3px solid #fafafa;
 }
 
-/* line 68, sass/screen.scss */
+/* line 67, sass/screen.scss */
 em {
   font-style: italic;
 }
@@ -139,23 +138,23 @@ em {
 /* Home
 /*
 /*****************************************************************************/
-/* line 77, sass/screen.scss */
+/* line 76, sass/screen.scss */
 ul.posts {
   list-style-type: none;
   margin-bottom: 2em;
 }
 
-/* line 82, sass/screen.scss */
+/* line 81, sass/screen.scss */
 ul.posts li {
   line-height: 1.75em;
   font-size: 1em;
 }
-/* line 85, sass/screen.scss */
+/* line 84, sass/screen.scss */
 ul.posts li a {
   font-weight: 800;
 }
 
-/* line 90, sass/screen.scss */
+/* line 89, sass/screen.scss */
 ul.posts span {
   font-size: 80%;
   color: #999999;
@@ -163,7 +162,7 @@ ul.posts span {
   float: right;
 }
 
-/* line 97, sass/screen.scss */
+/* line 96, sass/screen.scss */
 p.posts {
   margin-bottom: 2em;
 }
@@ -173,7 +172,7 @@ p.posts {
 /* Site
 /*
 /*****************************************************************************/
-/* line 107, sass/screen.scss */
+/* line 106, sass/screen.scss */
 .site {
   font-size: 110%;
   width: 35em;
@@ -182,7 +181,7 @@ p.posts {
   line-height: 1.5em;
 }
 
-/* line 115, sass/screen.scss */
+/* line 114, sass/screen.scss */
 .title {
   color: black;
   font-weight: bold;
@@ -191,63 +190,63 @@ p.posts {
   text-align: center;
 }
 
-/* line 122, sass/screen.scss */
+/* line 121, sass/screen.scss */
 .big {
   font-size: 1.5em;
 }
 
-/* line 125, sass/screen.scss */
+/* line 124, sass/screen.scss */
 .about {
   margin-bottom: 1em;
   color: #4d4d4d;
   font-weight: 200;
 }
-/* line 129, sass/screen.scss */
+/* line 128, sass/screen.scss */
 .about a {
   font-weight: 800;
 }
 
-/* line 135, sass/screen.scss */
+/* line 134, sass/screen.scss */
 .site ul {
   list-style-position: outside;
   margin-bottom: 1em;
 }
 
-/* line 139, sass/screen.scss */
+/* line 138, sass/screen.scss */
 .site li {
   margin: 1px 0px;
 }
 
-/* line 142, sass/screen.scss */
+/* line 141, sass/screen.scss */
 .site .title a {
   color: black;
   text-decoration: none;
 }
 
-/* line 147, sass/screen.scss */
+/* line 146, sass/screen.scss */
 .site .title a:hover {
   color: black;
 }
 
-/* line 151, sass/screen.scss */
+/* line 150, sass/screen.scss */
 .site .title a.extra {
   color: #aaa;
   text-decoration: none;
   margin-left: 1em;
 }
 
-/* line 157, sass/screen.scss */
+/* line 156, sass/screen.scss */
 .site .title a.extra:hover {
   color: black;
 }
 
-/* line 161, sass/screen.scss */
+/* line 160, sass/screen.scss */
 .site .meta {
   color: #aaa;
   font-size: 1em;
 }
 
-/* line 166, sass/screen.scss */
+/* line 165, sass/screen.scss */
 .site .footer {
   font-size: 80%;
   color: #666;
@@ -256,25 +255,25 @@ p.posts {
   font-weight: 200;
 }
 
-/* line 174, sass/screen.scss */
+/* line 173, sass/screen.scss */
 .site .footer .contact {
   float: left;
   margin-right: 3em;
 }
 
-/* line 179, sass/screen.scss */
+/* line 178, sass/screen.scss */
 .site .footer .contact a {
   color: #207785;
 }
 
-/* line 183, sass/screen.scss */
+/* line 182, sass/screen.scss */
 .site .footer .rss {
   margin-top: 1.1em;
   margin-right: -0.2em;
   float: right;
 }
 
-/* line 189, sass/screen.scss */
+/* line 188, sass/screen.scss */
 .site .footer .rss img {
   border: 0;
 }
@@ -284,52 +283,60 @@ p.posts {
 /* Posts
 /*
 /*****************************************************************************/
-/* line 199, sass/screen.scss */
+/* line 198, sass/screen.scss */
 #post {
   width: 100%;
   margin: 0px auto;
 }
-/* line 202, sass/screen.scss */
+/* line 201, sass/screen.scss */
 #post strong {
   font-weight: 800;
 }
 
-/* line 208, sass/screen.scss */
+/* line 207, sass/screen.scss */
 #post h1 {
   color: #4d4d4d;
   margin: 0px;
 }
-/* line 212, sass/screen.scss */
+/* line 211, sass/screen.scss */
 #post p {
   font-family: georgia;
   line-height: 1.6em;
 }
-/* line 216, sass/screen.scss */
+/* line 215, sass/screen.scss */
 #post p.meta {
   font-family: 'helvetica neue';
+  font-weight: 100;
+  margin-bottom: 1em;
+  margin-top: .5em;
+}
+/* line 221, sass/screen.scss */
+#post p.scene {
+  color: #b3b3b3;
+  font-size: 1.2em;
   font-weight: 100;
 }
 
 /* standard */
-/* line 225, sass/screen.scss */
+/* line 231, sass/screen.scss */
 #post pre {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
 }
 
-/* line 232, sass/screen.scss */
+/* line 238, sass/screen.scss */
 #post ul,
 #post ol {
   margin: 20px 0px;
 }
-/* line 234, sass/screen.scss */
+/* line 240, sass/screen.scss */
 #post ul li,
 #post ol li {
   margin: 10px 0px;
 }
 
-/* line 239, sass/screen.scss */
+/* line 245, sass/screen.scss */
 #post code {
   border: 1px solid #ddd;
   background-color: #eef;
@@ -337,25 +344,25 @@ p.posts {
   padding: 0 .2em;
 }
 
-/* line 246, sass/screen.scss */
+/* line 252, sass/screen.scss */
 #post pre code {
   border: none;
 }
 
 /* terminal */
-/* line 252, sass/screen.scss */
+/* line 258, sass/screen.scss */
 #post pre.terminal {
   border: 1px solid #4d4d4d;
   background-color: #666666;
   color: #e6e6e6;
 }
 
-/* line 261, sass/screen.scss */
+/* line 267, sass/screen.scss */
 #related {
   margin-top: 2em;
 }
 
-/* line 265, sass/screen.scss */
+/* line 271, sass/screen.scss */
 #related h2 {
   margin-bottom: 1em;
 }
