--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
+   <link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic' rel='stylesheet' type='text/css'>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>Ethan Fast: {{ page.title }}</title>
    <meta name="author" content="Ethan Fast" />
@@ -18,7 +20,7 @@
 
 <div class="site">
   <div class="title">
-    <a class="big" href="/">Ethan Fast</a>
+    <a class="big" href="/">ETHAN FAST</a>
   </div>
   
   {{ content }}
