--- a/css/screen.css
+++ b/css/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 114, ../../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, ../../../.rvm/gems/ruby-1.9.2-p290@taazr/gems/compass-0.12.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -71,6 +71,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
   background-color: white;
   font: 14px 'helvetica neue', arial, clean, sans-serif;
+  font-family: 'Lora' serif;
   text-align: center;
 }
 
@@ -85,50 +86,51 @@ h1 {
   margin-bottom: 1em;
   font-size: 1.2em;
   color: #b3b3b3;
+  font-family: 'Old Standard TT';
 }
 
-/* line 32, sass/screen.scss */
+/* line 33, sass/screen.scss */
 p {
   margin: 1.2em 0;
 }
 
-/* line 36, sass/screen.scss */
+/* line 37, sass/screen.scss */
 a {
   text-shadow: white 1px 1px 5px;
   color: #9b2629;
   text-decoration: none;
 }
 
-/* line 45, sass/screen.scss */
+/* line 46, sass/screen.scss */
 a:visited {
   color: #9b2629;
 }
 
-/* line 49, sass/screen.scss */
+/* line 50, sass/screen.scss */
 table {
   font-size: inherit;
   font: 100%;
 }
 
-/* line 53, sass/screen.scss */
+/* line 54, sass/screen.scss */
 strong {
   font-weight: 800;
 }
 
-/* line 57, sass/screen.scss */
+/* line 58, sass/screen.scss */
 hr {
   border: 1px solid #f2f2f2;
   width: 30%;
 }
 
-/* line 62, sass/screen.scss */
+/* line 63, sass/screen.scss */
 blockquote {
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 10px;
   border-left: 3px solid #fafafa;
 }
 
-/* line 67, sass/screen.scss */
+/* line 68, sass/screen.scss */
 em {
   font-style: italic;
 }
@@ -138,23 +140,23 @@ em {
 /* Home
 /*
 /*****************************************************************************/
-/* line 76, sass/screen.scss */
+/* line 77, sass/screen.scss */
 ul.posts {
   list-style-type: none;
   margin-bottom: 2em;
 }
 
-/* line 81, sass/screen.scss */
+/* line 82, sass/screen.scss */
 ul.posts li {
   line-height: 1.75em;
   font-size: 1em;
 }
-/* line 84, sass/screen.scss */
+/* line 85, sass/screen.scss */
 ul.posts li a {
   font-weight: 400;
 }
 
-/* line 89, sass/screen.scss */
+/* line 90, sass/screen.scss */
 ul.posts span {
   font-size: 80%;
   color: #999999;
@@ -162,7 +164,7 @@ ul.posts span {
   float: right;
 }
 
-/* line 96, sass/screen.scss */
+/* line 97, sass/screen.scss */
 p.posts {
   margin-bottom: 2em;
 }
@@ -172,7 +174,7 @@ p.posts {
 /* Site
 /*
 /*****************************************************************************/
-/* line 106, sass/screen.scss */
+/* line 107, sass/screen.scss */
 .site {
   font-size: 110%;
   width: 35em;
@@ -181,72 +183,74 @@ p.posts {
   line-height: 1.5em;
 }
 
-/* line 114, sass/screen.scss */
+/* line 115, sass/screen.scss */
 .title {
   color: black;
   font-weight: bold;
-  font-size: 1.6em;
+  font-size: 2em;
+  margin-top: 2.3em;
   margin-bottom: 2em;
   text-align: center;
+  font-family: 'Old Standard TT';
 }
 
-/* line 121, sass/screen.scss */
+/* line 124, sass/screen.scss */
 .big {
   font-size: 1.5em;
 }
 
-/* line 124, sass/screen.scss */
+/* line 127, sass/screen.scss */
 .about {
   margin-bottom: 2em;
   color: #4d4d4d;
   font-weight: 200;
 }
-/* line 128, sass/screen.scss */
+/* line 131, sass/screen.scss */
 .about a {
   font-weight: 800;
 }
 
-/* line 134, sass/screen.scss */
+/* line 137, sass/screen.scss */
 .site ul {
   list-style-position: outside;
   margin-bottom: 2em;
 }
 
-/* line 138, sass/screen.scss */
+/* line 141, sass/screen.scss */
 .site li {
   margin: 1px 0px;
 }
 
-/* line 141, sass/screen.scss */
+/* line 144, sass/screen.scss */
 .site .title a {
   color: black;
   text-decoration: none;
 }
 
-/* line 146, sass/screen.scss */
+/* line 149, sass/screen.scss */
 .site .title a:hover {
   color: black;
 }
 
-/* line 150, sass/screen.scss */
+/* line 153, sass/screen.scss */
 .site .title a.extra {
   color: #aaa;
   text-decoration: none;
   margin-left: 1em;
 }
 
-/* line 156, sass/screen.scss */
+/* line 159, sass/screen.scss */
 .site .title a.extra:hover {
   color: black;
 }
 
-/* line 160, sass/screen.scss */
+/* line 163, sass/screen.scss */
 .site .meta {
   color: #aaa;
   font-size: 1em;
 }
 
-/* line 165, sass/screen.scss */
+/* line 168, sass/screen.scss */
 .site .footer {
   font-size: 80%;
   color: #666;
@@ -255,25 +259,25 @@ p.posts {
   font-weight: 200;
 }
 
-/* line 173, sass/screen.scss */
+/* line 176, sass/screen.scss */
 .site .footer .contact {
   float: left;
   margin-right: 3em;
 }
 
-/* line 178, sass/screen.scss */
+/* line 181, sass/screen.scss */
 .site .footer .contact a {
   color: #207785;
 }
 
-/* line 182, sass/screen.scss */
+/* line 185, sass/screen.scss */
 .site .footer .rss {
   margin-top: 1.1em;
   margin-right: -0.2em;
   float: right;
 }
 
-/* line 188, sass/screen.scss */
+/* line 191, sass/screen.scss */
 .site .footer .rss img {
   border: 0;
 }
@@ -283,34 +287,34 @@ p.posts {
 /* Posts
 /*
 /*****************************************************************************/
-/* line 198, sass/screen.scss */
+/* line 201, sass/screen.scss */
 #post {
   width: 100%;
   margin: 0px auto;
 }
-/* line 201, sass/screen.scss */
+/* line 204, sass/screen.scss */
 #post strong {
   font-weight: 800;
 }
 
-/* line 207, sass/screen.scss */
+/* line 210, sass/screen.scss */
 #post h1 {
   color: #4d4d4d;
   margin: 0px;
 }
-/* line 211, sass/screen.scss */
+/* line 214, sass/screen.scss */
 #post p {
-  font-family: georgia;
+  font-family: 'Lora';
   line-height: 1.6em;
 }
-/* line 215, sass/screen.scss */
+/* line 218, sass/screen.scss */
 #post p.meta {
-  font-family: 'helvetica neue';
+  font-family: 'Old Standard TT';
   font-weight: 100;
   margin-bottom: 2em;
   margin-top: .5em;
 }
-/* line 221, sass/screen.scss */
+/* line 224, sass/screen.scss */
 #post p.scene {
   color: #b3b3b3;
   font-size: 1.2em;
@@ -318,26 +322,26 @@ p.posts {
 }
 
 /* standard */
-/* line 231, sass/screen.scss */
+/* line 234, sass/screen.scss */
 #post pre {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
 }
 
-/* line 238, sass/screen.scss */
+/* line 241, sass/screen.scss */
 #post ul,
 #post ol {
   font-family: georgia;
   margin: 20px 0px;
 }
-/* line 241, sass/screen.scss */
+/* line 244, sass/screen.scss */
 #post ul li,
 #post ol li {
   margin: 10px 0px;
 }
 
-/* line 246, sass/screen.scss */
+/* line 249, sass/screen.scss */
 #post code {
   border: 1px solid #ddd;
   background-color: #eef;
@@ -345,25 +349,25 @@ p.posts {
   padding: 0 .2em;
 }
 
-/* line 253, sass/screen.scss */
+/* line 256, sass/screen.scss */
 #post pre code {
   border: none;
 }
 
 /* terminal */
-/* line 259, sass/screen.scss */
+/* line 262, sass/screen.scss */
 #post pre.terminal {
   border: 1px solid #4d4d4d;
   background-color: #666666;
   color: #e6e6e6;
 }
 
-/* line 268, sass/screen.scss */
+/* line 271, sass/screen.scss */
 #related {
   margin-top: 2em;
 }
 
-/* line 272, sass/screen.scss */
+/* line 275, sass/screen.scss */
 #related h2 {
   margin-bottom: 1em;
 }
