--- a/css/screen.css
+++ b/css/screen.css
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   margin-bottom: 1em;
   font-size: 1.2em;
-  color: #b3b3b3;
+  color: #4d4d4d;
   font-family: 'Old Standard TT';
 }
 
