--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -252,6 +252,9 @@ p.posts{
       margin:10px 0px;
     }
   }
+  #post ol{
+    list-style-type:decimal;
+  }
 
   #post code {
     border: 1px solid #ddd;
