--- a/css/screen.css
+++ b/css/screen.css
@@ -202,7 +202,7 @@ p.posts {
 /* line 127, sass/screen.scss */
 .about {
   margin-bottom: 40px;
-  color: gray;
+  color: black;
   font-weight: 200;
 }
 /* line 131, sass/screen.scss */
