--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -10,6 +10,7 @@
 $main-color:white;
 $red:#9b2629;
 $blue:#207785;
+$code:#4d719f;
 
 body {
   background-color: $main-color;
@@ -233,15 +234,18 @@ p.posts{
     font-size:1.2em;
     font-weight:100;
   }
+  #fn1{
+    margin-top:3em;
+  }
 
 }
 
   /* standard */
 
   #post pre {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    padding: 0 .4em;
+    border: 1px solid lighten($code,45%);
+    background-color: lighten($code,50%);
+    padding: .2em .6em;
   }
 
   #post ul,
