--- a/css/screen.css
+++ b/css/screen.css
@@ -67,7 +67,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 14, sass/screen.scss */
+/* line 15, sass/screen.scss */
 body {
   background-color: white;
   font-size: 14px;
@@ -75,13 +75,13 @@ body {
   text-align: center;
 }
 
-/* line 21, sass/screen.scss */
+/* line 22, sass/screen.scss */
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: 800;
 }
 
-/* line 26, sass/screen.scss */
+/* line 27, sass/screen.scss */
 h1 {
   margin-bottom: 1em;
   font-size: 1.2em;
@@ -89,48 +89,48 @@ h1 {
   font-family: 'Old Standard TT';
 }
 
-/* line 33, sass/screen.scss */
+/* line 34, sass/screen.scss */
 p {
   margin: 1.2em 0;
 }
 
-/* line 37, sass/screen.scss */
+/* line 38, sass/screen.scss */
 a {
   text-shadow: white 1px 1px 5px;
   color: #9b2629;
   text-decoration: none;
 }
 
-/* line 46, sass/screen.scss */
+/* line 47, sass/screen.scss */
 a:visited {
   color: #9b2629;
 }
 
-/* line 50, sass/screen.scss */
+/* line 51, sass/screen.scss */
 table {
   font-size: inherit;
   font: 100%;
 }
 
-/* line 54, sass/screen.scss */
+/* line 55, sass/screen.scss */
 strong {
   font-weight: 800;
 }
 
-/* line 58, sass/screen.scss */
+/* line 59, sass/screen.scss */
 hr {
   border: 1px solid #f2f2f2;
   width: 30%;
 }
 
-/* line 63, sass/screen.scss */
+/* line 64, sass/screen.scss */
 blockquote {
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 10px;
   border-left: 3px solid #fafafa;
 }
 
-/* line 68, sass/screen.scss */
+/* line 69, sass/screen.scss */
 em {
   font-style: italic;
 }
@@ -140,23 +140,23 @@ em {
 /* Home
 /*
 /*****************************************************************************/
-/* line 77, sass/screen.scss */
+/* line 78, sass/screen.scss */
 ul.posts {
   list-style-type: none;
   margin-bottom: 2em;
 }
 
-/* line 82, sass/screen.scss */
+/* line 83, sass/screen.scss */
 ul.posts li {
   line-height: 1.75em;
   font-size: 1em;
 }
-/* line 85, sass/screen.scss */
+/* line 86, sass/screen.scss */
 ul.posts li a {
   font-weight: 400;
 }
 
-/* line 90, sass/screen.scss */
+/* line 91, sass/screen.scss */
 ul.posts span {
   font-size: 80%;
   color: #999999;
@@ -164,7 +164,7 @@ ul.posts span {
   float: right;
 }
 
-/* line 97, sass/screen.scss */
+/* line 98, sass/screen.scss */
 p.posts {
   margin-bottom: 2em;
 }
@@ -174,7 +174,7 @@ p.posts {
 /* Site
 /*
 /*****************************************************************************/
-/* line 107, sass/screen.scss */
+/* line 108, sass/screen.scss */
 .site {
   font-size: 110%;
   width: 35em;
@@ -183,7 +183,7 @@ p.posts {
   line-height: 1.5em;
 }
 
-/* line 115, sass/screen.scss */
+/* line 116, sass/screen.scss */
 .title {
   color: black;
   font-weight: bold;
@@ -194,63 +194,63 @@ p.posts {
   font-family: 'Old Standard TT';
 }
 
-/* line 124, sass/screen.scss */
+/* line 125, sass/screen.scss */
 .big {
   font-size: 1.5em;
 }
 
-/* line 127, sass/screen.scss */
+/* line 128, sass/screen.scss */
 .about {
   margin-bottom: 40px;
   color: black;
   font-weight: 200;
 }
-/* line 131, sass/screen.scss */
+/* line 132, sass/screen.scss */
 .about a {
   font-weight: 800;
 }
 
-/* line 137, sass/screen.scss */
+/* line 138, sass/screen.scss */
 .site ul {
   list-style-position: outside;
   margin-bottom: 2em;
 }
 
-/* line 141, sass/screen.scss */
+/* line 142, sass/screen.scss */
 .site li {
   margin: 1px 0px;
 }
 
-/* line 144, sass/screen.scss */
+/* line 145, sass/screen.scss */
 .site .title a {
   color: black;
   text-decoration: none;
 }
 
-/* line 149, sass/screen.scss */
+/* line 150, sass/screen.scss */
 .site .title a:hover {
   color: black;
 }
 
-/* line 153, sass/screen.scss */
+/* line 154, sass/screen.scss */
 .site .title a.extra {
   color: #aaa;
   text-decoration: none;
   margin-left: 1em;
 }
 
-/* line 159, sass/screen.scss */
+/* line 160, sass/screen.scss */
 .site .title a.extra:hover {
   color: black;
 }
 
-/* line 163, sass/screen.scss */
+/* line 164, sass/screen.scss */
 .site .meta {
   color: #aaa;
   font-size: 1em;
 }
 
-/* line 168, sass/screen.scss */
+/* line 169, sass/screen.scss */
 .site .footer {
   font-size: 80%;
   color: #666;
@@ -259,25 +259,25 @@ p.posts {
   font-weight: 200;
 }
 
-/* line 176, sass/screen.scss */
+/* line 177, sass/screen.scss */
 .site .footer .contact {
   float: left;
   margin-right: 3em;
 }
 
-/* line 181, sass/screen.scss */
+/* line 182, sass/screen.scss */
 .site .footer .contact a {
   color: #207785;
 }
 
-/* line 185, sass/screen.scss */
+/* line 186, sass/screen.scss */
 .site .footer .rss {
   margin-top: 1.1em;
   margin-right: -0.2em;
   float: right;
 }
 
-/* line 191, sass/screen.scss */
+/* line 192, sass/screen.scss */
 .site .footer .rss img {
   border: 0;
 }
@@ -287,35 +287,35 @@ p.posts {
 /* Posts
 /*
 /*****************************************************************************/
-/* line 201, sass/screen.scss */
+/* line 202, sass/screen.scss */
 #post {
   width: 100%;
   margin: 0px auto;
 }
-/* line 204, sass/screen.scss */
+/* line 205, sass/screen.scss */
 #post strong {
   font-weight: 800;
 }
 
-/* line 209, sass/screen.scss */
+/* line 210, sass/screen.scss */
 #post {
   float: left;
   margin: 40px 0px;
 }
-/* line 212, sass/screen.scss */
+/* line 213, sass/screen.scss */
 #post h1 {
   color: #4d4d4d;
   margin: 0px;
 }
-/* line 216, sass/screen.scss */
+/* line 217, sass/screen.scss */
 #post p {
   line-height: 1.6em;
 }
-/* line 221, sass/screen.scss */
+/* line 222, sass/screen.scss */
 #post p.footnote {
   color: gray;
 }
-/* line 224, sass/screen.scss */
+/* line 225, sass/screen.scss */
 #post p.meta {
   font-family: 'Old Standard TT';
   font-size: 1em;
@@ -323,38 +323,42 @@ p.posts {
   margin-bottom: 2em;
   margin-top: .5em;
 }
-/* line 231, sass/screen.scss */
+/* line 232, sass/screen.scss */
 #post p.scene {
   color: #b3b3b3;
   font-size: 1.2em;
   font-weight: 100;
 }
-
-/* standard */
-/* line 241, sass/screen.scss */
-#post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
+/* line 237, sass/screen.scss */
+#post #fn1 {
+  margin-top: 3em;
 }
 
-/* line 248, sass/screen.scss */
+/* standard */
+/* line 245, sass/screen.scss */
+#post pre {
+  border: 1px solid #e1e8f0;
+  background-color: #f2f5f9;
+  padding: .2em .6em;
+}
+
+/* line 252, sass/screen.scss */
 #post ul,
 #post ol {
   margin: 20px 0px;
 }
-/* line 251, sass/screen.scss */
+/* line 255, sass/screen.scss */
 #post ul li,
 #post ol li {
   margin: 10px 0px;
 }
 
-/* line 255, sass/screen.scss */
+/* line 259, sass/screen.scss */
 #post ol {
   list-style-type: decimal;
 }
 
-/* line 259, sass/screen.scss */
+/* line 263, sass/screen.scss */
 #post code {
   border: 1px solid #ddd;
   background-color: #eef;
@@ -362,25 +366,25 @@ p.posts {
   padding: 0 .2em;
 }
 
-/* line 266, sass/screen.scss */
+/* line 270, sass/screen.scss */
 #post pre code {
   border: none;
 }
 
 /* terminal */
-/* line 272, sass/screen.scss */
+/* line 276, sass/screen.scss */
 #post pre.terminal {
   border: 1px solid #4d4d4d;
   background-color: #666666;
   color: #e6e6e6;
 }
 
-/* line 281, sass/screen.scss */
+/* line 285, sass/screen.scss */
 #related {
   margin-top: 2em;
 }
 
-/* line 285, sass/screen.scss */
+/* line 289, sass/screen.scss */
 #related h2 {
   margin-bottom: 1em;
 }
