--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -224,7 +224,7 @@ p.posts{
   }
   p.meta{
     font-family:'Old Standard TT';
-    font-size:1em;
+    font-size:.8em;
     font-weight:100;
     margin-bottom:2em;
     margin-top:.5em;
