--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -17,6 +17,8 @@ body {
   font-size: 14px;
   font-family:'Old Standard TT' serif;
   text-align: center;
+  font-family:'Lora';
+  
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -28,7 +30,7 @@ h1 {
   margin-bottom: 1em;
   font-size:1.2em;
   color:darken($main-color,70%);
-  font-family:'Old Standard TT';
+  //font-family:'Old Standard TT';
 }
 
 p {
@@ -120,7 +122,7 @@ p.posts{
   margin-top:2.3em;
   margin-bottom: 40px;
   text-align:center;
-  font-family:'Old Standard TT';
+  //font-family:'Old Standard TT';
 }
 .big{
   font-size:1.5em;
@@ -223,7 +225,7 @@ p.posts{
     color:darken($main-color,50%);
   }
   p.meta{
-    font-family:'Old Standard TT';
+    //font-family:'Old Standard TT';
     font-size:.8em;
     font-weight:100;
     margin-bottom:2em;
