--- a/css/screen.css
+++ b/css/screen.css
@@ -73,64 +73,64 @@ body {
   font-size: 14px;
   font-family: 'Old Standard TT' serif;
   text-align: center;
+  font-family: 'Lora';
 }
 
-/* line 22, sass/screen.scss */
+/* line 24, sass/screen.scss */
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: 800;
 }
 
-/* line 27, sass/screen.scss */
+/* line 29, sass/screen.scss */
 h1 {
   margin-bottom: 1em;
   font-size: 1.2em;
   color: #4d4d4d;
-  font-family: 'Old Standard TT';
 }
 
-/* line 34, sass/screen.scss */
+/* line 36, sass/screen.scss */
 p {
   margin: 1.2em 0;
 }
 
-/* line 38, sass/screen.scss */
+/* line 40, sass/screen.scss */
 a {
   text-shadow: white 1px 1px 5px;
   color: #9b2629;
   text-decoration: none;
 }
 
-/* line 47, sass/screen.scss */
+/* line 49, sass/screen.scss */
 a:visited {
   color: #9b2629;
 }
 
-/* line 51, sass/screen.scss */
+/* line 53, sass/screen.scss */
 table {
   font-size: inherit;
   font: 100%;
 }
 
-/* line 55, sass/screen.scss */
+/* line 57, sass/screen.scss */
 strong {
   font-weight: 800;
 }
 
-/* line 59, sass/screen.scss */
+/* line 61, sass/screen.scss */
 hr {
   border: 1px solid #f2f2f2;
   width: 30%;
 }
 
-/* line 64, sass/screen.scss */
+/* line 66, sass/screen.scss */
 blockquote {
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 10px;
   border-left: 3px solid #fafafa;
 }
 
-/* line 69, sass/screen.scss */
+/* line 71, sass/screen.scss */
 em {
   font-style: italic;
 }
@@ -140,23 +140,23 @@ em {
 /* Home
 /*
 /*****************************************************************************/
-/* line 78, sass/screen.scss */
+/* line 80, sass/screen.scss */
 ul.posts {
   list-style-type: none;
   margin-bottom: 2em;
 }
 
-/* line 83, sass/screen.scss */
+/* line 85, sass/screen.scss */
 ul.posts li {
   line-height: 1.75em;
   font-size: 1em;
 }
-/* line 86, sass/screen.scss */
+/* line 88, sass/screen.scss */
 ul.posts li a {
   font-weight: 400;
 }
 
-/* line 91, sass/screen.scss */
+/* line 93, sass/screen.scss */
 ul.posts span {
   font-size: 80%;
   color: #999999;
@@ -164,7 +164,7 @@ ul.posts span {
   float: right;
 }
 
-/* line 98, sass/screen.scss */
+/* line 100, sass/screen.scss */
 p.posts {
   margin-bottom: 2em;
 }
@@ -174,7 +174,7 @@ p.posts {
 /* Site
 /*
 /*****************************************************************************/
-/* line 108, sass/screen.scss */
+/* line 110, sass/screen.scss */
 .site {
   font-size: 110%;
   width: 35em;
@@ -183,7 +183,7 @@ p.posts {
   line-height: 1.5em;
 }
 
-/* line 116, sass/screen.scss */
+/* line 118, sass/screen.scss */
 .title {
   color: black;
   font-weight: bold;
@@ -191,66 +191,65 @@ p.posts {
   margin-top: 2.3em;
   margin-bottom: 40px;
   text-align: center;
-  font-family: 'Old Standard TT';
 }
 
-/* line 125, sass/screen.scss */
+/* line 127, sass/screen.scss */
 .big {
   font-size: 1.5em;
 }
 
-/* line 128, sass/screen.scss */
+/* line 130, sass/screen.scss */
 .about {
   margin-bottom: 40px;
   color: black;
   font-weight: 200;
 }
-/* line 132, sass/screen.scss */
+/* line 134, sass/screen.scss */
 .about a {
   font-weight: 800;
 }
 
-/* line 138, sass/screen.scss */
+/* line 140, sass/screen.scss */
 .site ul {
   list-style-position: outside;
   margin-bottom: 2em;
 }
 
-/* line 142, sass/screen.scss */
+/* line 144, sass/screen.scss */
 .site li {
   margin: 1px 0px;
 }
 
-/* line 145, sass/screen.scss */
+/* line 147, sass/screen.scss */
 .site .title a {
   color: black;
   text-decoration: none;
 }
 
-/* line 150, sass/screen.scss */
+/* line 152, sass/screen.scss */
 .site .title a:hover {
   color: black;
 }
 
-/* line 154, sass/screen.scss */
+/* line 156, sass/screen.scss */
 .site .title a.extra {
   color: #aaa;
   text-decoration: none;
   margin-left: 1em;
 }
 
-/* line 160, sass/screen.scss */
+/* line 162, sass/screen.scss */
 .site .title a.extra:hover {
   color: black;
 }
 
-/* line 164, sass/screen.scss */
+/* line 166, sass/screen.scss */
 .site .meta {
   color: #aaa;
   font-size: 1em;
 }
 
-/* line 169, sass/screen.scss */
+/* line 171, sass/screen.scss */
 .site .footer {
   font-size: 80%;
   color: #666;
@@ -259,25 +258,25 @@ p.posts {
   font-weight: 200;
 }
 
-/* line 177, sass/screen.scss */
+/* line 179, sass/screen.scss */
 .site .footer .contact {
   float: left;
   margin-right: 3em;
 }
 
-/* line 182, sass/screen.scss */
+/* line 184, sass/screen.scss */
 .site .footer .contact a {
   color: #207785;
 }
 
-/* line 186, sass/screen.scss */
+/* line 188, sass/screen.scss */
 .site .footer .rss {
   margin-top: 1.1em;
   margin-right: -0.2em;
   float: right;
 }
 
-/* line 192, sass/screen.scss */
+/* line 194, sass/screen.scss */
 .site .footer .rss img {
   border: 0;
 }
@@ -287,78 +286,77 @@ p.posts {
 /* Posts
 /*
 /*****************************************************************************/
-/* line 202, sass/screen.scss */
+/* line 204, sass/screen.scss */
 #post {
   width: 100%;
   margin: 0px auto;
 }
-/* line 205, sass/screen.scss */
+/* line 207, sass/screen.scss */
 #post strong {
   font-weight: 800;
 }
 
-/* line 210, sass/screen.scss */
+/* line 212, sass/screen.scss */
 #post {
   float: left;
   margin: 40px 0px;
 }
-/* line 213, sass/screen.scss */
+/* line 215, sass/screen.scss */
 #post h1 {
   color: #4d4d4d;
   margin: 0px;
 }
-/* line 217, sass/screen.scss */
+/* line 219, sass/screen.scss */
 #post p {
   line-height: 1.6em;
 }
-/* line 222, sass/screen.scss */
+/* line 224, sass/screen.scss */
 #post p.footnote {
   color: gray;
 }
-/* line 225, sass/screen.scss */
+/* line 227, sass/screen.scss */
 #post p.meta {
-  font-family: 'Old Standard TT';
   font-size: .8em;
   font-weight: 100;
   margin-bottom: 2em;
   margin-top: .5em;
 }
-/* line 232, sass/screen.scss */
+/* line 234, sass/screen.scss */
 #post p.scene {
   color: #b3b3b3;
   font-size: 1.2em;
   font-weight: 100;
 }
-/* line 237, sass/screen.scss */
+/* line 239, sass/screen.scss */
 #post #fn1 {
   margin-top: 3em;
 }
 
 /* standard */
-/* line 245, sass/screen.scss */
+/* line 247, sass/screen.scss */
 #post pre {
   border: 1px solid #e1e8f0;
   background-color: #f2f5f9;
   padding: .2em .6em;
 }
 
-/* line 252, sass/screen.scss */
+/* line 254, sass/screen.scss */
 #post ul,
 #post ol {
   margin: 20px 0px;
 }
-/* line 255, sass/screen.scss */
+/* line 257, sass/screen.scss */
 #post ul li,
 #post ol li {
   margin: 10px 0px;
 }
 
-/* line 259, sass/screen.scss */
+/* line 261, sass/screen.scss */
 #post ol {
   list-style-type: decimal;
 }
 
-/* line 263, sass/screen.scss */
+/* line 265, sass/screen.scss */
 #post code {
   border: 1px solid #ddd;
   background-color: #eef;
@@ -366,25 +364,25 @@ p.posts {
   padding: 0 .2em;
 }
 
-/* line 270, sass/screen.scss */
+/* line 272, sass/screen.scss */
 #post pre code {
   border: none;
 }
 
 /* terminal */
-/* line 276, sass/screen.scss */
+/* line 278, sass/screen.scss */
 #post pre.terminal {
   border: 1px solid #4d4d4d;
   background-color: #666666;
   color: #e6e6e6;
 }
 
-/* line 285, sass/screen.scss */
+/* line 287, sass/screen.scss */
 #related {
   margin-top: 2em;
 }
 
-/* line 289, sass/screen.scss */
+/* line 291, sass/screen.scss */
 #related h2 {
   margin-bottom: 1em;
 }
