--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,25 +21,31 @@
 
 <div class="site">
   <div class="title">
-    <a class="big" href="/">ETHAN FAST</a>
+     Ethan Fast <a href="/">wrote this.</a>
   </div>
   
-  {{ content }}
+  <div id="content">
   
-  <div class="footer">
-    <div class="contact">
-      <p>
-        ejhfast@gmail.com<br />
-        ethanfast@stanford.edu
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/ejhfast/">github.com/ejhfast</a><br />
-        <a href="http://twitter.com/unignorant/">twitter.com/unignorant</a><br />
-      </p>
+    {{ content }}
+  
+  
+    <div class="footer">
+      <div class="contact">
+        <p>
+          ejhfast@gmail.com<br />
+          ethanfast@stanford.edu
+        </p>
+      </div>
+      <div class="contact">
+        <p>
+          <a href="http://github.com/ejhfast/">github.com/ejhfast</a><br />
+          <a href="http://twitter.com/unignorant/">twitter.com/unignorant</a><br />
+        </p>
+      </div>
+    
     </div>
   </div>
+  
 </div>
 
 <script type="text/javascript">
