--- a/css/screen.css
+++ b/css/screen.css
@@ -69,68 +69,68 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 15, sass/screen.scss */
 body {
-  background-color: white;
+  background-color: #b3b3b3;
   font-size: 14px;
-  font-family: 'Old Standard TT' serif;
   text-align: center;
-  font-family: 'Lora';
+  font-family: 'Gudea';
 }
 
-/* line 24, sass/screen.scss */
+/* line 25, sass/screen.scss */
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: 800;
+  font-family: 'Gudea';
 }
 
-/* line 29, sass/screen.scss */
+/* line 31, sass/screen.scss */
 h1 {
   margin-bottom: 1em;
   font-size: 1.2em;
   color: #4d4d4d;
 }
 
-/* line 36, sass/screen.scss */
+/* line 38, sass/screen.scss */
 p {
   margin: 1.2em 0;
 }
 
-/* line 40, sass/screen.scss */
+/* line 42, sass/screen.scss */
 a {
   text-shadow: white 1px 1px 5px;
   color: #9b2629;
   text-decoration: none;
 }
 
-/* line 49, sass/screen.scss */
+/* line 51, sass/screen.scss */
 a:visited {
   color: #9b2629;
 }
 
-/* line 53, sass/screen.scss */
+/* line 55, sass/screen.scss */
 table {
   font-size: inherit;
   font: 100%;
 }
 
-/* line 57, sass/screen.scss */
+/* line 59, sass/screen.scss */
 strong {
   font-weight: 800;
 }
 
-/* line 61, sass/screen.scss */
+/* line 63, sass/screen.scss */
 hr {
   border: 1px solid #f2f2f2;
   width: 30%;
 }
 
-/* line 66, sass/screen.scss */
+/* line 68, sass/screen.scss */
 blockquote {
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 10px;
   border-left: 3px solid #fafafa;
 }
 
-/* line 71, sass/screen.scss */
+/* line 73, sass/screen.scss */
 em {
   font-style: italic;
 }
@@ -140,23 +140,23 @@ em {
 /* Home
 /*
 /*****************************************************************************/
-/* line 80, sass/screen.scss */
+/* line 82, sass/screen.scss */
 ul.posts {
   list-style-type: none;
   margin-bottom: 2em;
 }
 
-/* line 85, sass/screen.scss */
+/* line 87, sass/screen.scss */
 ul.posts li {
   line-height: 1.75em;
   font-size: 1em;
 }
-/* line 88, sass/screen.scss */
+/* line 90, sass/screen.scss */
 ul.posts li a {
   font-weight: 400;
 }
 
-/* line 93, sass/screen.scss */
+/* line 95, sass/screen.scss */
 ul.posts span {
   font-size: 80%;
   color: #999999;
@@ -164,7 +164,7 @@ ul.posts span {
   float: right;
 }
 
-/* line 100, sass/screen.scss */
+/* line 102, sass/screen.scss */
 p.posts {
   margin-bottom: 2em;
 }
@@ -174,109 +174,109 @@ p.posts {
 /* Site
 /*
 /*****************************************************************************/
-/* line 110, sass/screen.scss */
-.site {
+/* line 112, sass/screen.scss */
+#content {
+  width: 30em;
+  width: 30em;
   font-size: 110%;
-  width: 35em;
   text-align: left;
   margin: 3em auto 2em auto;
   line-height: 1.5em;
 }
 
-/* line 118, sass/screen.scss */
-.title {
-  color: black;
-  font-weight: bold;
-  font-size: 2em;
-  margin-top: 2.3em;
-  margin-bottom: 40px;
-  text-align: center;
+/* line 120, sass/screen.scss */
+.site {
+  width: 60em;
+  text-align: left;
+  margin: 3em auto 2em auto;
+  line-height: 1.5em;
+  background-color: white;
 }
 
-/* line 127, sass/screen.scss */
+/* line 128, sass/screen.scss */
+.title {
+  width: 100%;
+  font-size: 1.7em;
+  font-family: 'helvetica neue',helvetica;
+  font-weight: 200;
+  margin-top: 0em;
+  text-align: center;
+  color: #4d4d4d;
+  padding: 60px 0px;
+  border-bottom: 1px solid #e6e6e6;
+}
+/* line 138, sass/screen.scss */
+.title a {
+  color: #9b2629;
+  text-decoration: none;
+}
+/* line 142, sass/screen.scss */
+.title a:hover {
+  color: black;
+}
+
+/* line 147, sass/screen.scss */
 .big {
   font-size: 1.5em;
 }
 
-/* line 130, sass/screen.scss */
+/* line 150, sass/screen.scss */
 .about {
   margin-bottom: 40px;
   color: black;
   font-weight: 200;
 }
-/* line 134, sass/screen.scss */
+/* line 154, sass/screen.scss */
 .about a {
   font-weight: 800;
 }
 
-/* line 140, sass/screen.scss */
+/* line 160, sass/screen.scss */
 .site ul {
   list-style-position: outside;
   margin-bottom: 2em;
 }
 
-/* line 144, sass/screen.scss */
+/* line 164, sass/screen.scss */
 .site li {
   margin: 1px 0px;
 }
 
-/* line 147, sass/screen.scss */
-.site .title a {
-  color: black;
-  text-decoration: none;
-}
-
-/* line 152, sass/screen.scss */
-.site .title a:hover {
-  color: black;
-}
-
-/* line 156, sass/screen.scss */
-.site .title a.extra {
-  color: #aaa;
-  text-decoration: none;
-  margin-left: 1em;
-}
-
-/* line 162, sass/screen.scss */
-.site .title a.extra:hover {
-  color: black;
-}
-
-/* line 166, sass/screen.scss */
+/* line 168, sass/screen.scss */
 .site .meta {
   color: #aaa;
   font-size: 1em;
 }
 
-/* line 171, sass/screen.scss */
+/* line 173, sass/screen.scss */
 .site .footer {
   font-size: 80%;
   color: #666;
   margin-top: 2em;
+  padding-bottom: 2em;
   overflow: hidden;
   font-weight: 200;
 }
 
-/* line 179, sass/screen.scss */
+/* line 182, sass/screen.scss */
 .site .footer .contact {
   float: left;
   margin-right: 3em;
 }
 
-/* line 184, sass/screen.scss */
+/* line 187, sass/screen.scss */
 .site .footer .contact a {
   color: #207785;
 }
 
-/* line 188, sass/screen.scss */
+/* line 191, sass/screen.scss */
 .site .footer .rss {
   margin-top: 1.1em;
   margin-right: -0.2em;
   float: right;
 }
 
-/* line 194, sass/screen.scss */
+/* line 197, sass/screen.scss */
 .site .footer .rss img {
   border: 0;
 }
@@ -286,77 +286,79 @@ p.posts {
 /* Posts
 /*
 /*****************************************************************************/
-/* line 204, sass/screen.scss */
+/* line 207, sass/screen.scss */
 #post {
   width: 100%;
   margin: 0px auto;
 }
-/* line 207, sass/screen.scss */
+/* line 210, sass/screen.scss */
 #post strong {
   font-weight: 800;
 }
 
-/* line 212, sass/screen.scss */
+/* line 215, sass/screen.scss */
 #post {
-  float: left;
   margin: 40px 0px;
 }
-/* line 215, sass/screen.scss */
+/* line 218, sass/screen.scss */
 #post h1 {
   color: #4d4d4d;
   margin: 0px;
+  text-align: center;
 }
-/* line 219, sass/screen.scss */
+/* line 223, sass/screen.scss */
 #post p {
   line-height: 1.6em;
 }
-/* line 224, sass/screen.scss */
+/* line 228, sass/screen.scss */
 #post p.footnote {
   color: gray;
 }
-/* line 227, sass/screen.scss */
+/* line 231, sass/screen.scss */
 #post p.meta {
   font-size: .8em;
   font-weight: 100;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
   margin-top: .5em;
+  font-family: 'Gudea';
+  text-align: center;
 }
-/* line 234, sass/screen.scss */
+/* line 242, sass/screen.scss */
 #post p.scene {
   color: #b3b3b3;
   font-size: 1.2em;
   font-weight: 100;
 }
-/* line 239, sass/screen.scss */
+/* line 247, sass/screen.scss */
 #post #fn1 {
   margin-top: 3em;
 }
 
 /* standard */
-/* line 247, sass/screen.scss */
+/* line 255, sass/screen.scss */
 #post pre {
   border: 1px solid #e1e8f0;
   background-color: #f2f5f9;
   padding: .2em .6em;
 }
 
-/* line 254, sass/screen.scss */
+/* line 262, sass/screen.scss */
 #post ul,
 #post ol {
   margin: 20px 0px;
 }
-/* line 257, sass/screen.scss */
+/* line 265, sass/screen.scss */
 #post ul li,
 #post ol li {
   margin: 10px 0px;
 }
 
-/* line 261, sass/screen.scss */
+/* line 269, sass/screen.scss */
 #post ol {
   list-style-type: decimal;
 }
 
-/* line 265, sass/screen.scss */
+/* line 273, sass/screen.scss */
 #post code {
   border: 1px solid #ddd;
   background-color: #eef;
@@ -364,25 +366,25 @@ p.posts {
   padding: 0 .2em;
 }
 
-/* line 272, sass/screen.scss */
+/* line 280, sass/screen.scss */
 #post pre code {
   border: none;
 }
 
 /* terminal */
-/* line 278, sass/screen.scss */
+/* line 286, sass/screen.scss */
 #post pre.terminal {
   border: 1px solid #4d4d4d;
   background-color: #666666;
   color: #e6e6e6;
 }
 
-/* line 287, sass/screen.scss */
+/* line 295, sass/screen.scss */
 #related {
   margin-top: 2em;
 }
 
-/* line 291, sass/screen.scss */
+/* line 299, sass/screen.scss */
 #related h2 {
   margin-bottom: 1em;
 }
