--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -85,7 +85,7 @@ ul.posts {
 }
 
   ul.posts li {
-    line-height: 1.75em;
+    //line-height: 1.6em;
     font-size:1em;
     a{
       font-weight:400;
@@ -162,7 +162,7 @@ p.posts{
     margin-bottom:2em;
   }
   .site li{
-    margin:1px 0px;
+    //margin:1px 0px;
   }
 
   .site .meta {
@@ -260,10 +260,11 @@ p.posts{
 
   #post ul,
   #post ol {
+    list-style-type:disc;
     //font-family:georgia;
-    margin:20px 0px;
+    //margin:20px 0px;
     li{
-      margin:10px 0px;
+      //margin:10px 0px;
     }
   }
   #post ol{
