--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TYPEDJS: {{ page.title }}</title>
+  <title>TypedJS: {{ page.title }}</title>
   <link href='http://fonts.googleapis.com/css?family=Gudea:400,700,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Asap:400,700,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
  <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+ <script src="/javascript/typed.js" type="text/javascript"></script>
+ <script src="/javascript/typedjs_parser.js" type="text/javascript"></script>
+ <script src="/javascript/test.js" type="text/javascript"></script>
+ <script src="/javascript/jquery-1.7.min.js" type="text/javascript"></script>
+ 
 </head>
 <body>
   <header>
     <div class="title">
-      TYPED<span class="red">JS</span>
+      <a href="/">TYPED<span class="red">JS</span></a>
       <div class="sub">Save your JavaScript</div>
     </div>
   </header>
@@ -18,17 +23,13 @@
 {{ content }}
 
 <footer>
+  <ul>
+    <li>Created by Ethan Fast</li>
+    <li>&copy; Taazr Corp 2011</li>
+  </ul>
 </footer>
 
 </body>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-28634341-1");
-pageTracker._trackPageview();
-</script>
 </html>
 
 
