--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
 <footer>
   <ul>
-    <li>Created by Ethan Fast</li>
+    <li>Created by <a href='http://ethanfast.com'>Ethan Fast</a></li>
     <li>&copy; Taazr Corp 2012</li>
   </ul>
 </footer>
