--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -302,6 +302,9 @@ footer{
   width:100%;
   height:70px;
   @include linear-gradient(lighten(black,30%), lighten(black,20%) 60%);
+  a{
+    color:darken(white,30%);
+  }
   ul{
     position:relative;
     top:20px;
