--- a/css/screen.css
+++ b/css/screen.css
@@ -418,6 +418,10 @@ footer {
   background-image: linear-gradient(#333333 60%, #4d4d4d);
 }
 /* line 305, sass/screen.scss */
+footer a {
+  color: #b3b3b3;
+}
+/* line 308, sass/screen.scss */
 footer ul {
   position: relative;
   top: 20px;
@@ -426,7 +430,7 @@ footer ul {
   list-style-type: none;
   color: #b3b3b3;
 }
-/* line 312, sass/screen.scss */
+/* line 315, sass/screen.scss */
 footer ul li {
   display: inline;
   margin: 0px 20px 0px 0px;
